# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  alembic.ini  cspell.json  docker-compose.yml  project-words.txt  pyproject.toml  start.sh
.github/workflows/: pr-validation.yml
alembic/: env.py  update_head.py
alembic/versions/: 018b998ca8a1_add_on_delete_constraints_to_price_.py  0c8c4dd9b6a2_add_covering_index_for_cheapest_price_.py  13d335342c43_make_registered_by_nullable.py  1de185bea2bd_add_favorite_station_table.py  1f79f11dbbf0_add_station_table.py  1fb52151a97c_add_missing_indexes.py  4d5d7e759be5_add_station_timestamps.py  58d1815b1a06_add_cascade_delete_on_favorite_station_.py  5cbefe49984e_add_on_delete_constraints_to_price_.py  7e0a3dee44e8_station_rename_osm_id.py  a5e015b20975_use_server_default_for_id_column.py  a7f0f1f8921c_add_priceregistration_table.py  ac49b334803b_add_user_table.py  b3c9e8f12d45_enable_pg_trgm.py  c47a8decb3ce_add_cascade_delete_on_price_.py  c63680c1d8b2_add_apitoken_table.py  d58da8be2931_add_favorite_station_table.py  e34b89f7b41a_initial.py  f021d088de12_add_notification_tables.py  head
app/: main.py
app/core/: auth.py  config.py  db.py  firestore.py  logging.py  schemas.py
app/favorite_stations/: models.py  routers.py
app/notifications/: enums.py  models.py  routers.py  services.py
scripts/: create_api_token.py  reset_db.py  seed.py  seed_price_history.sql  seed_random_prices.sql  seed_users.sql  stamp_revision.sh
tests/: conftest.py
(+43 files in other folders)
